--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -15,7 +15,7 @@
 
     <ion-item  color="tertiary">
         <ion-label input type="password" icon name="key"><ion-icon name="key" ></ion-icon>  Contraseña:</ion-label>
-        <ion-input type="password" ngModel #password="ngModel" name="password" minlength="3"></ion-input>
+        <ion-input type="password" ngModel #password="ngModel" name="cont" minlength="3"></ion-input>
     </ion-item>
 
 
@@ -23,7 +23,7 @@
         <ion-label position="name"><ion-icon name="contact" class="icon"></ion-icon>Nombre:</ion-label>
         <ion-input ngModel #name="ngModel" name="name" minlength="3"></ion-input>
     </ion-item>
-    <ion-button type="submit" [disabled]=!Forma.valid routerLink="/tabs1" expand="block"><ion-icon name="log-in"></ion-icon>Enviar</ion-button>
+    <ion-button type="submit" [disabled]=!Forma.valid expand="block"><ion-icon name="log-in"></ion-icon>Enviar</ion-button>
     
    <p class="linea"> O</p>
    <br>
